--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 currentVersion=1.0.0-SNAPSHOT
-projectGroup=sollecitom.modulith-example
+projectGroup=sollecitom.work-tool
 org.gradle.jvmargs=-Xmx2g -XX:+UseZGC -XX:MaxMetaspaceSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dkotlin.daemon.jvm.options=-XX:MaxMetaspaceSize=768m,-Xmx1500m
 org.gradle.parallel=true
 org.gradle.workers.max=128
